# AgileVision

./: .gitignore  CMakeLists.txt  README.md
source/agile_vision/basic/: CMakeLists.txt  agv_nps.h  base_type_def.h  basic.cpp  basic_export.h  image_data.h  testa.cpp  testa.h
source/agile_vision/core/: CMakeLists.txt  consume_info.h  core_base_def.h  core_export.h  data_buffer.cpp  data_buffer.h  data_spec.cpp  data_spec.h  engine.cpp  engine.h  global_variable.cpp  global_variable.h  input_pin.cpp  input_pin.h  output_pin.cpp  output_pin.h  pin.cpp  pin.h  procedure.cpp  procedure.h  process.cpp  process.h  process_manager.cpp  process_manager.h  produce_info.h  prop_pin.cpp  prop_pin.h  relationship_mapping.cpp  relationship_mapping.h  relationship_network.cpp  relationship_network.h  run_context.h  serialize_policy.h  solution.cpp  solution.h  testx.cpp  tool.cpp  tool.h  tool_factory.cpp  tool_factory.h  (+3 more)
source/agile_vision/package/: CMakeLists.txt  bytes_writer.cpp  bytes_writer.h  common.proto  compressor.cpp  compressor.h  data_buffer.proto  package.cpp  package.h  package_export.h  procedure.proto  process.proto  solution.proto  tool.proto  tool_pin.proto
source/agile_vision/stdtool/: CMakeLists.txt  async_process.cpp  async_process.h  break_tool.cpp  break_tool.h  condition_process_tool.cpp  condition_process_tool.h  loop_process_tool.cpp  loop_process_tool.h  process_tool.cpp  process_tool.h  stdtool_export.h  string_process_tool.cpp  string_process_tool.h  sync_procedure_tool.cpp  sync_procedure_tool.h  wait_process_tool.cpp  wait_process_tool.h  wait_tool.cpp  wait_tool.h
source/agile_vision/test/: CMakeLists.txt  local_image2d.cpp  local_image2d.h  test.cpp  test_solution.cpp  test_solution.h
